--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,8 @@
   --orange-light: hsl(14, 100%, 70%);
   
   --title-color: var(--orange);
-  --text-color: var(--black);
-  --body-color: var(--white);
+  --text-color: var(--white);
+  --body-color: var(--balck);
   --container-color: var(--orange-light);
 
   /*========== Font and typography ==========*/
