--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@
   --orange-light: hsl(14, 100%, 70%);
   
   --title-color: var(--orange);
-  --text-color: var(--white);
+  --text-color: var(--balck);
   --body-color: var(--balck);
   --container-color: var(--orange-light);
 
