--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,7 +166,7 @@ img {
 .nav__link{
   width:2.5rem;
   height:2.5rem;
-  background-color:transparent;
+  background-color:hsla(0,0%,5%,0.5);
   color(--white);
   font-size:1.5rem;
   border-radius:50%;
