--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   /*========== Colors ==========*/
 --black: hsl(0, 0%, 10%);
 --white: hsl(0, 0%, 100%);
---orange: hsl(14, 100%, 50%);
+--orange: hsl(20, 95%, 45%);
 --orange-light: hsl(14, 100%, 70%);
 
 --title-color: var(--orange);
@@ -16,13 +16,14 @@
 --body-color: var(--white); /* 修正为白色作为背景颜色 */
 --container-color: var(--orange-light);
 
+ /*========== Font and typography ==========*/
+  /*.5rem = 8px | 1rem = 16px ...*/
 
-  /*========== Font and typography ==========*/
   --body-font: "Syne", sans-serif;
-  --biggest-font-size: 3rem;
-  --big-font-size: 1.5rem;
+  --biggest-font-size: 4rem;
+  --big-font-size:2rem;
   --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
+  --h2-font-size: 1.5rem;
   --h3-font-size: 1rem;
   --normal-font-size: .938rem;
   --small-font-size: .813rem;
@@ -31,20 +32,25 @@
   --font-regular: 400;
   --font-semi-bold: 600;
   --font-bold: 700;
-}
 
-/*========== Responsive typography==========*/
+  /*========== z index ==========*/
+  --z-tooltip: 10;
+  --z-fixed: 100;
+}
+ /*========== Responsive typography==========*/
+
 @media screen and (min-width: 1150px) {
   :root {
     --biggest-font-size: 5.5rem;
-    --big-font-size: 2.75rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
+    --big-font-size: 3rem;
+    --h1-font-size: 2.75rem;
+    --h2-font-size: 2.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1.125rem;
     --small-font-size: .875rem;
   }
 }
+
 
 /*=============== BASE ===============*/
 * {
@@ -81,7 +87,13 @@ h1, h2, h3 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
+h1 {
+    font-size: var(--h1-font-size);
+}
 
+h2 {
+    font-size: var(--h2-font-size);
+}
 p {
   line-height: 1.5;
 }
@@ -132,29 +144,19 @@ img {
   overflow: hidden;
 }
 
-/*=============== HEADER & NAV ===============*/
-.header {
-  background-color: var(--black);
-  padding: 1rem;
-}
 
-.header nav ul {
-  display: flex;
-  justify-content: center;
-  gap: 2rem; /* Space between nav items */
-}
 /*=============== NAV ===============*/
-.nav ul {
+.nav_icon ul {
   position:fixed;
   bottom:1.5rem;
   left:0;
   right:0;
-  background-color:hsla(0,0%,98%,.3);
+  background-color:hsla(0,0%,10%,0.4);
   width:88%;
   margin-inline:auto;
   backdrop-filter:blur(16px);
   -webkit-backdrop-filter:blur(16px);
-  padding:1rem 2rem;
+  padding:1rem 3.5rem;
   border-radius:4rem;
   z-index:var(--z-fixed);
 }
@@ -163,18 +165,41 @@ img {
   justify-content: space-between;
   align-items:center;
 }
-.nav__link{
-  width:4rem;
-  height:4rem;
-  background-color:hsla(0,0%,5%,0.5);
+.nav__lick{
+  width:3rem;
+  height:3rem;
+  background-color:--black;
   color(--white);
-  font-size:1.5rem;
+  font-size:2rem;
   border-radius:50%;
   display: grid;
   place-items:center;
   transition:background-color .6s;
 }
-
+/*=============== HEADER & NAV ===============*/
+.header {
+  background-color: var(--black);
+  padding: 1rem;
+}
+.header nav ul {
+  display: flex;
+  justify-content: center;
+  gap: 2rem; /* Space between nav items */
+  padding: 0; /* 去除默认内边距 */
+}
+.header nav ul li {
+    display: inline; /* 使列表项在一行内显示 */
+    margin-right: 8rem; /* 调整列表项之间的间隔 */
+    font-size: 1.5rem;
+    }
+.header nav ul li:last-child {
+    margin-right: 0; /* 最后一个列表项不需要右边距 */
+}
+/*=============== Home ===============*/
+.perfil__img {
+    width: 400px; /* 设置你想要的宽度 */
+    height: auto; /* 保持比例 */
+}
 /*=============== FOOTER ===============*/
 .footer {
   text-align: center;
