--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -247,3 +247,14 @@ img {
     margin-right: 10px; /* 与文本之间的间距 */
     vertical-align: middle; /* 垂直对齐 */
 }
+/*===============BUTTON ===============*/
+.button{
+   display:inline-flex;
+   justify-content:center;
+   background-color: var(--first-color);
+   color:var (--white-color);
+   font-weight:var(--font-semi-bold);
+   padding:1.25rem 2.5rem;
+   border-radius:4rem;
+   transition :background-color,4s;
+}
