--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,7 +178,7 @@ img {
 }
 
 /*active link*/
-background-color:var (--orange);
+background-color:var (--orange-light);
 
 
 /*=============== HEADER & NAV ===============*/
