--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,7 +178,10 @@ img {
 }
 
 /*active link*/
-background-color:var (--orange-light);
+.active-link{
+    background-color:var(--orange-light);
+}
+
 
 
 /*=============== HEADER & NAV ===============*/
@@ -265,7 +268,7 @@ background-color:var (--orange-light);
 }
 .about__info
 {
-    padding:5rem 0rem;
+    padding:5rem 0;
 }
 .about__img{
      width: 400px;/* 根据需要调整宽度 */
@@ -286,24 +289,24 @@ background-color:var (--orange-light);
     column-gap:1.5rem;
     margin-block:2rem;
 }
-.about__link{
-    width:3rem;
-    height:3rem;
-    background-color:var(--white);
+.about__link {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--white);
     color: var(--black);
-    font_size:1.5rem;
-    border-radius:50%;
-    display:grid;
-    place-items:center;
-    transition:background-color .4s,color .4s;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: background-color .4s, color .4s;
 }
-,about__link:hover{
+。about__link:hover{
     background-color:var(--black);
     color:var(--orange);
 }
 .about__note{
     margin-block:1rem 2rem;
-    font_size:var(--small-font-size);
+    font-size:var(--small-font-size);
 }
 
 /*================== Info ==================*/
@@ -403,7 +406,7 @@ background-color:var (--orange-light);
 }
 
 .projects__button span {
-    font-weight: var(--font-medium);
+    /*font-weight: var(--font-medium);*/
 }
 
 .projects__button:hover {
@@ -467,7 +470,7 @@ background-color:var (--orange-light);
 }
 
 .works__button span {
-    font-weight: var(--font-medium);
+   /* font-weight: var(--font-medium);*/
 }
 
 .works__button:hover {
@@ -519,18 +522,24 @@ background-color:var (--orange-light);
       background-color: var(--orange-light );
   }
 /*===============scroll bar===============*/
-::-webkit-scrollbar{
-     width:.6rem;
-     background-color:hsl (0,0%,20%);
+::-webkit-scrollbar {
+width:.6rem;
+     background-color:hsl(0,0%,20%);
      border-radius:.5rem;
 }
-::-webkit-scrollbar.thumb{
-     
-     background-color:hsl (0,0%,30%);
+
+/* Track of the scrollbar */
+::-webkit-scrollbar-track {
+background-color:hsl(0,0%,70%);
+}
+
+/* Handle of the scrollbar */
+::-webkit-scrollbar-thumb {
+ background-color:hsl(0,0%,30%);
      border-radius:.5rem;
 }
-::-webkit-scrollbar.thumb:hover{
-     
-     background-color:hsl (0,0%,40%);
-     
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+   background-color:hsl(0,0%,40%);
 }
