--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,7 +375,7 @@ img {
 }
 .about__note{
     margin-block:1rem 2rem;
-    font-size:var(--small-font-size);
+    font-size:var(--normal-font-size);
 }
 
 /*================== Info ==================*/
